Convert RegistryTest to JUnit5
This is a simplistic conversion, along with some modernization.

Change-Id: Ib5d726a43b898edfda5a0281096c1acec3ec691a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>